[tool.poetry]
name = "online banking system"
version = "0.1.0"
description = ""
authors = ["amaan8429 <mohdamaan8429@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.2"
odmantic = "^0.9.2"
pydantic = "1.10.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
